# fastauth

./: .bumpversion.cfg  .coverage.ashx.14516.XXQIcSdx  .coverage.ashx.2726.XTokSRYx  .coverage.ashx.2832.XUlLPQqx  .coverage.ashx.31973.XFwcwRux  .coverage.ashx.37056.XxVQujPx  .coverage.ashx.5467.XTUcJvYx  .coverage.ashx.6161.XtbroXPx  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  install  justfile  mkdocs.yaml  pyproject.toml
.github/: CODEOWNERS  dependbot.yaml  labels.yaml
.github/ISSUE_TEMPLATE/: config.yaml  docs_request.md  feature_request.yaml
.github/workflows/: docs.yaml  publish.yaml  test.yaml
app/: .env.example  README.md  app.py
configuration/conf/: index.html
docs/configuration/: conf.md
fastauth/: _types.py  authorize.py  callback.py  config.py  const_data.py  cookies.py  csrf.py  data.py  defaults.py  exceptions.py  frameworks.py  grant_redirect.py  libtypes.py  log.py  logger.py  oauth2.py  oauth2_baseflow.py  oauth2_options.py  redirect.py  requests.py  responses.py  signin.py  signout.py  types.py  utils.py
fastauth/adapters/: request.py  response.py  response_switcher.py  use_response.py
fastauth/adapters/fastapi/: csrf.py  csrf_middleware.py  csrf_mitigation_dependency.py  flow.py  request.py  response.py  route.py  use_response.py
fastauth/callbacks/: signin.py
fastauth/compat/: constants.py
fastauth/flow/: base.py  flow.py
fastauth/jwts/: handler.py  helpers.py  operations.py
fastauth/oauth2/: base.py  flow.py
fastauth/playround/: __init__.py
fastauth/providers/: base.py  google.py
fastauth/providers/google/: google.py  schemas.py  user_schema.py  user_scheme.py
fastauth/providers/spotify/: schemas.py
installation/: index.html
providers/github/: index.html
providers/google/: index.html
providers/reddit/: index.html
providers/spotify/: index.html
scripts/: clean  format  install  lint  pre-push
search/: search_index.json
security/CSRF/csrf/: index.html
security/JWTs/jwt/: index.html
security/PKCE/pkce/: index.html
tests/: .env.example  test_authorization_redirect.py  test_base_provider.py  test_base_redirect.py  test_cookies.py  test_google.py  test_google_2.py  test_jwt_main_handler.py  test_jwts.py  test_jwts_ops.py  test_pkce.py  test_provider_endpoints.py  test_secret_key.py  test_signin_callback.py  test_test.py  test_test_env.py  test_token_payload.py  test_utils.py  utils.py
